<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BF6969"
    tools:context=".Login">

    <TextView
        android:id="@+id/HeaderText4"
        android:layout_width="334dp"
        android:layout_height="58dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/welcome_to_vbot_login"
        android:textAlignment="center"
        android:textColor="#ECD402"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <EditText
        android:id="@+id/EmailInputLogin"
        android:layout_width="238dp"
        android:layout_height="45dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/vit_email_id_login"
        android:inputType="textEmailAddress"
        android:textColorHint="#D6C6C6"
        app:layout_constraintBottom_toTopOf="@+id/PasswordInputLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderText4"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/PasswordInputLogin"
        android:layout_width="239dp"
        android:layout_height="43dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        android:textColorHint="#ECE5E5"
        app:layout_constraintBottom_toTopOf="@+id/SignInLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderText4"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/HeaderText5"
        android:layout_width="224dp"
        android:layout_height="21dp"
        android:layout_marginTop="28dp"
        android:text="@string/not_registered_yet_sign_up_login"
        android:textAlignment="center"
        android:textColor="#F1E2E2"
        android:textColorHint="#DCD2D2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInLoginButton"
        app:layout_constraintVertical_bias="0.023"
        android:onClick="signup"
        />

    <Button
        android:id="@+id/SignInLoginButton"
        android:layout_width="291dp"
        android:layout_height="43dp"
        android:layout_marginTop="364dp"
        android:text="@string/sign_in_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderText4"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderText5"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>